Bug fix for partial resets.